--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "memory-card",
+  "name": "memory-card-game",
   "version": "1.0.0",
   "private": true,
   "homepage": "https://themetar.github.io/memory-card-game-react",
@@ -9,17 +9,13 @@
     "@testing-library/user-event": "^12.1.10",
     "gh-pages": "^3.2.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-dom": "^17.0.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy": "pnpm build",
+    "deploy": "gh-pages -d dist",
+    "start": "vite",
+    "build": "vite build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^5.0.4",
+    "vite": "^7.1.9"
   }
 }
