--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "homepage": "https://themetar.github.io/memory-card-game-react",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
     "gh-pages": "^6.3.0",
     "react": "^19.0.2",
     "react-dom": "^19.0.2"
@@ -15,7 +12,8 @@
     "predeploy": "pnpm build",
     "deploy": "gh-pages -d dist",
     "start": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "test": "vitest"
   },
   "eslintConfig": {
     "extends": [
@@ -36,7 +34,12 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@vitejs/plugin-react": "^5.0.4",
-    "vite": "^7.1.9"
+    "jsdom": "^27.0.0",
+    "vite": "^7.1.9",
+    "vitest": "^3.2.4"
   }
 }
